# marl-cooperative-cpu-memory-optimizer

./: README.md  pyproject.toml  requirements.txt
configs/: maddpg.yaml  qmix.yaml
docs/: methodology.md  results_template.md
experiments/: evaluate.py  train_maddpg.py
scripts/: plot_metrics.py
src/: env.py  utils.py
src/agents/: maddpg.py  qmix.py  replay_buffer.py
tests/: test_env.py
